--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -743,72 +743,6 @@ h4,
   }
 }
 
-.top-bar{
-  background-color: #F6821C;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #fff;
-}
-
-.top-bar a {
-  color: #F6821C;
-}
-
-.logo img {
-  background-color: #00aeff;
-  top: 4px;
-  margin-top: 4px;
-  left: 8px;
-  object-position: left;
-  box-sizing: border-box;
-  border-radius: 4px;
-  box-shadow: #136ad5;
-  margin-left: 8px;
-  max-width: 100%;
-  height: 400vh;
-  width: auto;
-  max-height: 145vw;
-  position: relative;
-  transition: all 0.3s ease;
-  z-index: 9999;
-}
-
-@media (max-width: 991.98px) {
-  .logo img {
-    top: 4px;
-    margin-top: 4px;
-    max-height: 125vw;
-    position: absolute;
-    left: 8px;
-    margin-left: 8px;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .logo img {
-    top: 4px;
-    margin-top: 4px;
-    max-height: 90vw;
-    left: 4px;
-    margin-left: 8px;
-  } 
-}
-
-@media (max-width: 575.98px) {
-  .logo img {
-    top: 4px;
-    margin-top: 4px;
-    max-height: 75vw;
-    left: 4px;
-  }
-}
-
-.logo img a:hover {
-  zoom: 1;
-}
-
 .success-section {
   padding: 60px 0;
   background: #ffffff;
@@ -1141,24 +1075,79 @@ a:hover {
   padding: 6rem 0;
 }
 
+.top-bar{
+  background-color: #F6821C;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
+
+.top-bar a {
+  color: #F6821C;
+}
+
+.logo img {
+  background-color: #00aeff;
+  top: 4px;
+  margin-top: 4px;
+  left: 8px;
+  object-position: left;
+  box-sizing: border-box;
+  border-radius: 4px;
+  box-shadow: #136ad5;
+  margin-left: 8px;
+  max-width: 100%;
+  height: 400vh;
+  width: auto;
+  max-height: 145vw;
+  position: relative;
+  transition: all 0.3s ease;
+  z-index: 9999;
+}
+
+@media (max-width: 991.98px) {
+  .logo img {
+    top: 4px;
+    margin-top: 4px;
+    max-height: 125vw;
+    position: absolute;
+    left: 8px;
+    margin-left: 8px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .logo img {
+    top: 4px;
+    margin-top: 4px;
+    max-height: 90vw;
+    left: 4px;
+    margin-left: 8px;
+  } 
+}
+
+@media (max-width: 575.98px) {
+  .logo img {
+    top: 4px;
+    margin-top: 4px;
+    max-height: 75vw;
+    left: 4px;
+  }
+}
+
+.logo img a:hover {
+  zoom: 1;
+}
+
 /* Navigation */
 .site-nav {
-  background: #fff;
+  background: #140263c9;
   border-bottom: 1px solid #eee;
   position: sticky;
   top: 0;
   z-index: 999;
-}
-
-.top-bar {
-  background-color: var(--primary-color);
-  color: #fff;
-  padding: 0.5rem 0;
-}
-
-.top-bar a {
-  color: #fff;
-  margin-right: 1rem;
 }
 
 .site-navigation {
