--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1124,9 +1124,6 @@ a:hover {
 }
 
 .site-nav {
-  background: rgba(255, 255, 255, 0.95);
-  transition: background 0.3s ease;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
   display: flex;
   justify-content: space-between;
   padding: 1rem 0;
@@ -1174,14 +1171,6 @@ a:hover {
   text-decoration: none !important;
   color: rgba(255, 255, 255, 0.5);
   position: relative;
-}
-
-.site-nav .site-menu>li>a:hover {
-  color: #ffffff;
-}
-
-.site-nav .site-menu>li.active>a {
-  color: #ffffff;
 }
 
 .site-nav.dark a {
@@ -1245,7 +1234,7 @@ a:hover {
   right: 0;
   z-index: 2000;
   padding-top: 20px;
-  background: #ffffff;
+  background: #03545f;
   height: calc(100vh);
   -webkit-transform: translateX(100%);
   -ms-transform: translateX(100%);
@@ -1271,7 +1260,7 @@ a:hover {
 }
 
 .site-mobile-menu .site-mobile-menu-header .site-mobile-menu-close {
-  float: right;
+  float: left;
   margin-top: 8px;
 }
 
@@ -1280,30 +1269,12 @@ a:hover {
   display: inline-block;
   padding-left: 10px;
   padding-right: 0px;
-  line-height: 1;
+  padding: 2rem 0;
+  line-height: 1rem;
   cursor: pointer;
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-}
-
-.site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo {
-  float: left;
-  margin-top: 10px;
-  margin-left: 0px;
-}
-
-.site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo a {
-  display: inline-block;
-  text-transform: uppercase;
-}
-
-.site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo a img {
-  max-width: 70px;
-}
-
-.site-mobile-menu .site-mobile-menu-header .site-mobile-menu-logo a:hover {
-  text-decoration: none;
 }
 
 .site-mobile-menu .site-mobile-menu-body {
@@ -1323,7 +1294,14 @@ a:hover {
 }
 
 .site-mobile-menu .site-nav a {
-  padding: 5px 20px;
+  text-decoration: none;
+  font-weight: 600;
+  font-family: var(--heading-font);
+  color: #000000;
+  text-transform: capitalize;
+  padding: 10px 0;
+  font-size: 14px;
+  list-style: none;
   display: block;
   position: relative;
   color: #000000;
@@ -1334,47 +1312,16 @@ a:hover {
 }
 
 .site-mobile-menu .site-nav li {
+  list-style: none;
+  padding: 8px 0;
+  margin: 0;
+  align-items: center;
   position: relative;
   display: block;
 }
 
 .site-mobile-menu .site-nav li.active>a {
   color: #00779B;
-}
-
-.site-mobile-menu .site-nav .arrow-collapse {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  z-index: 20;
-  width: 36px;
-  height: 36px;
-  text-align: center;
-  cursor: pointer;
-  border-radius: 50%;
-  border: 1px solid #f8f9fa;
-}
-
-.site-mobile-menu .site-nav .arrow-collapse:before {
-  font-size: 14px;
-  z-index: 20;
-  font-family: "icomoon";
-  content: "\e313";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%) rotate(-180deg);
-  -ms-transform: translate(-50%, -50%) rotate(-180deg);
-  transform: translate(-50%, -50%) rotate(-180deg);
-  -webkit-transition: .3s all ease;
-  -o-transition: .3s all ease;
-  transition: .3s all ease;
-}
-
-.site-mobile-menu .site-nav .arrow-collapse.collapsed:before {
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
 }
 
 .site-mobile-menu .site-nav>li {
@@ -1485,7 +1432,6 @@ a:hover {
 
 .site-nav.shrink {
   padding: 0.5rem 0;
-  background: rgba(255, 255, 255, 0.95);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
 }
