--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,12 +429,16 @@ h4,
 
 /* Modal backdrop */
 .faq-modal {
-  display: none;
+  display: none; /* Hidden by default */
   position: fixed;
-  width: 45%;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
   height: 100%;
-  overflow-y: auto;
-  background-color: rgba(0,0,0,0.6);
+  overflow: auto;
+  background-color: rgba(0, 34, 77, 0.8); /* Semi-transparent dark blue */
+  padding-top: 60px;
 }
 
 /* Modal content */
@@ -451,8 +455,6 @@ h4,
   margin-bottom: 20px;
   color: #0056b3;
 }
-
-
 
 .close-btn {
   color: #aaa;
@@ -824,7 +826,6 @@ h4,
 .untree_co-section {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #f9f9f9;
 }
 
 .section-title {
@@ -940,7 +941,6 @@ h4,
   }
 }
 
-
 .menu-absolute {
   position: absolute !important;
 }
@@ -1051,7 +1051,6 @@ a:hover {
   background-color: #F6821C;
   padding: 10px;
   display: flex;
-  align-items: center;
   justify-content: space-between;
   color: #fff;
 }
@@ -1275,12 +1274,15 @@ a:hover {
 }
 
 .site-mobile-menu .site-mobile-menu-body {
+  justify-content: center;
+  align-items: center;
+  text-transform: capitalize;
+  text-decoration: none;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   position: relative;
   padding: 0 20px 20px 20px;
   height: calc(100vh - 52px);
-  padding-bottom: 150px;
 }
 
 .site-mobile-menu .site-nav {
