--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1253,9 +1253,9 @@ a:hover {
   font-weight: 800;
   text-decoration: none;
   list-style: none;
-  display: block;
+  display: inline-block;
   position: relative;
-  color: #000000;
+  color: #fcfcfc;
 }
 
 .site-mobile-menu .site-nav a:hover {
