--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1017,7 +1017,7 @@ a:hover {
   left: 8px;
   object-position: left;
   box-sizing: border-box;
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: #136ad5;
   margin-left: 8px;
   max-width: 100%;
@@ -1107,7 +1107,12 @@ a:hover {
   margin-bottom: 0;
 }
 
-.site-nav .site-menu>li {
+.site-nav .site-menu li {
+  list-style: none;
+  float: left;
+  box-sizing: border-box;
+  border-radius: 30px;
+  padding: 8px;
   display: inline-block;
 }
 
@@ -1137,8 +1142,10 @@ a:hover {
 }
 
 .site-mobile-menu-close {
-  display: block;
-  position: relative;
+  overflow: hidden;
+  position: absolute;
+  right: 0;
+  background: #03545f;
   height: 30px;
   width: 30px;
   z-index: 99;
@@ -1146,7 +1153,7 @@ a:hover {
   top: -20px;
 }
 
-.site-mobile-menu-close>span {
+.site-mobile-menu-close>span  {
   cursor: pointer;
   display: block;
   position: absolute;
